--- a/medical_image_classification.ipynb
+++ b/medical_image_classification.ipynb
@@ -90,15 +90,13 @@
         "import tensorflow as tf\n",
         "import tensorflow.keras as keras\n",
         "\n",
-        "from tensorflow.keras import layers\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.models import Sequential, Model\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, GlobalAveragePooling2D, Flatten, Dense, Dropout\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import Flatten, Dense\n",
         "from tensorflow.keras.applications import VGG16\n",
-        "from tensorflow.keras.applications.resnet50 import preprocess_input\n",
         "from tensorflow.keras.optimizers import Adam"
       ]
     },
